svcNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: gorest-service-nodeport
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gorest
  type: NodePort
