ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "gorest.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gorest-service-nodeport
            port:
              number: 80
